--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
+    "mixitup": "^3.3.1",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3"
   }
